--- a/website/marketing.html
+++ b/website/marketing.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "">
 
 <HTML>
 <HEAD>
@@ -16,15 +16,15 @@
     <td width="100%">
       <table width="100%" border="0" cellspacing="0" cellpadding="0" class="headerboxtop">
         <tr>
-          <td align=left width="1%"><a href="http://www.ofbiz.org"><img src="images/ofbiz_logo.jpg"  border="0" alt="The Open For Business Project"></a></td>
-          <td align=right>
+          <td align="left" width="1%"><a href="http://www.ofbiz.org"><img src="images/ofbiz_logo.jpg"  border="0" alt="The Open For Business Project"></a></td>
+          <td align="right">
             <table cellpadding="0" cellspacing="0" width="1%">
               <tr>
-              	<td valign="middle" align="right"><a href="http://www.java.net"><img src="http://today.java.net/images/javanet_button_90.gif" width="90" height="25" border="0" alt="java.net Member Button"></a></td>
-                <td valign=middle>&nbsp;&nbsp;</td>
+                <td valign="middle" align="right"><a href="http://www.java.net"><img src="http://today.java.net/images/javanet_button_90.gif" width="90" height="25" border="0" alt="java.net Member Button"></a></td>
+                <td valign="middle">&nbsp;&nbsp;</td>
                 <td valign="middle" align="right"><A href="http://sf.net/projects/ofbiz"><IMG src="http://sourceforge.net/sflogo.php?group_id=27173" width="88" height="31" border="0" alt="SourceForge Logo"></A></td>
-                <td valign=middle>&nbsp;&nbsp;</td>
-                <td valign=middle><A href="http://www.ofbiz.org"><img src="images/ofbiz_powered.gif" width="88" border="0"></a></td>
+                <td valign="middle">&nbsp;&nbsp;</td>
+                <td valign="middle"><A href="http://www.ofbiz.org"><img src="images/ofbiz_powered.gif" width="88" border="0"></a></td>
               </tr>
             </table>
           </td>
@@ -321,6 +321,7 @@
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.shocktroop.com/st/control/main" target="_blank"><b>ShockTroop.com</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.tgoblin.com/control/main" target="_blank"><b>TGoblin.com</b></a></div>
 
+              <div>&nbsp;-&nbsp;<a class="buttontext" href="https://www.seidensticker-shirts.de/control/main" target="_blank"><b>Seidensticker Shirts (German)</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.shirtalarm.de/ecommerce/control/main" target="_blank"><b>Shirt Alarm (German)</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://141.44.140.91/oddesse/control/main" target="_blank"><b>Oddesse (German/English)</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://beehot.online.sh.cn/ecommerce/control/main" target="_blank"><b>Beehot (Chinese)</b></a></div>
