Removed signature nutrition links, changed jpublish link to the sf.net page, jpublish.org seems to be down
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@3933 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/index.html
+++ b/website/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "">
 
 <HTML>
 <HEAD>
@@ -449,7 +449,7 @@ target="_blank">iCentris</a></b></p>
           <tr>
             <td align=left>
                 <ul>
-                  <li><a class="buttontext" href="http://www.jpublish.org/" target="_blank">JPublish</a>
+                  <li><a class="buttontext" href="http://sf.net/projects/jpublish/" target="_blank">JPublish</a>
                   <li><a class="buttontext" href="http://www.freemarker.org/" target="_blank">FreeMarker</a>
                   <li><a class="buttontext" href="http://www.beanshell.org/" target="_blank">BeanShell</a>   
                   <li><a class="buttontext" href="http://jetty.mortbay.org/jetty/index.html" target="_blank">Jetty</a> 
