--- a/website/marketing.html
+++ b/website/marketing.html
@@ -298,7 +298,6 @@
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.storit.com/control/main" target="_blank"><b>Storit.com</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.mad-man.com.au" target="_blank"><b>Mad-man</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.reallycoolemail.com/control/main" target="_blank"><b>Really Cool Email</b></a></div>
-              <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.signaturenutrition.com/" target="_blank"><b>Signature Nutrition</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.firstendurance.com/" target="_blank"><b>First Endurance</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.bigislandsams.com/" target="_blank"><b>Big Island Sam's</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.utahsbest.com/" target="_blank"><b>Utah's Best</b></a></div>
@@ -403,7 +402,7 @@ them.</p>
 <div class="contenttext"><b>President</b></div>
 <div class="contenttext"><b>NowPulse (<a href="http://www.nowpulse.com" target="_blank">www.nowpulse.com</a>)</b></div>
 <br>
-<div class="contenttext">Live site: <b><a href="http://www.signaturenutrition.com" target="_blank">Signature Nutrition</a></b></div>
+<!-- No longer running OFBiz <div class="contenttext">Live site: <b><a href="http://www.signaturenutrition.com" target="_blank">Signature Nutrition</a></b></div> -->
 <div class="contenttext">Live site: <b><a href="http://www.firstendurance.com" target="_blank">First Endurance</a></b></div>
 <!-- =============================================================== -->
 <br>
