Added ref book notice on the main page
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@3955 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/index.html
+++ b/website/index.html
@@ -16,15 +16,15 @@
     <td width="100%">
       <table width="100%" border="0" cellspacing="0" cellpadding="0" class="headerboxtop">
         <tr>          
-          <td align=left width="1%"><a href="http://www.ofbiz.org"><img src="images/ofbiz_logo.jpg"  border="0" alt="The Open For Business Project"></a></td>
-          <td align=right>
+          <td align="left" width="1%"><a href="http://www.ofbiz.org"><img src="images/ofbiz_logo.jpg"  border="0" alt="The Open For Business Project"></a></td>
+          <td align="right">
             <table cellpadding="0" cellspacing="0" width="1%">
               <tr>
-              	<td valign="middle" align="right"><a href="http://www.java.net"><img src="http://today.java.net/images/javanet_button_90.gif" width="90" height="25" border="0" alt="java.net Member Button"></a></td>
-                <td valign=middle>&nbsp;&nbsp;</td>
+                <td valign="middle" align="right"><a href="http://www.java.net"><img src="http://today.java.net/images/javanet_button_90.gif" width="90" height="25" border="0" alt="java.net Member Button"></a></td>
+                <td valign="middle">&nbsp;&nbsp;</td>
                 <td valign="middle" align="right"><A href="http://sf.net/projects/ofbiz"><IMG src="http://sourceforge.net/sflogo.php?group_id=27173" width="88" height="31" border="0" alt="SourceForge Logo"></A></td>
-                <td valign=middle>&nbsp;&nbsp;</td>
-                <td valign=middle><A href="http://www.ofbiz.org"><img src="images/ofbiz_powered.gif" width="88" border="0"></a></td>               
+                <td valign="middle">&nbsp;&nbsp;</td>
+                <td valign="middle"><A href="http://www.ofbiz.org"><img src="images/ofbiz_powered.gif" width="88" border="0"></a></td>               
               </tr>
             </table>
           </td>
@@ -127,16 +127,16 @@
 <!-- content start -->
 
 <table width="100%" cellpadding="0" cellspacing="0" border="0">
-  <tr valign=top>
+  <tr valign="top">
 <!-- Column One -->
-    <td width="20%" valign=top>
+    <td width="20%" valign="top">
 
-  <TABLE border=0 width="100%" cellspacing="0" cellpadding="0" class="boxoutside">
+  <TABLE border="0" width="100%" cellspacing="0" cellpadding="0" class="boxoutside">
     <TR>
       <TD width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxtop">
           <tr>
-            <td valign=middle align=left>
+            <td valign="middle" align="left">
               <div class="boxhead">What is OFBiz?</div>
             </td>
           </tr>
@@ -147,7 +147,7 @@
       <TD width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxbottom">
           <tr>
-            <td align=left>
+            <td align="left">
               <div>&nbsp;-&nbsp;<a class="buttontext" href="general-overview.html"><b>General Overview</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="ofbiz-for-me.html"><b>Is OFBiz for Me?</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="feature-list.html"><b>Feature List</b></a></div>
@@ -165,7 +165,7 @@
       <TD width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxtop">
           <tr>
-            <td valign=middle align=left>
+            <td valign="middle" align="left">
               <div class="boxhead">Demo Site</div>
             </td>
           </tr>
@@ -176,7 +176,7 @@
       <TD width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxbottom">
           <tr>
-            <td align=left>
+            <td align="left">
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://demo.dejc.com:8080/ecommerce/control/main" target="_blank">eCommerce Demo</a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="https://demo.dejc.com:8443/catalog/control/login/main?USERNAME=demoadmin&PASSWORD=ofbiz" target="_blank">Management Console</a></div>
               <div class="tabletext">(Demo Provided By <a class="buttontext" href="http://www.ofbiz.org/services.html" target="_blank">Undersun Consulting</a>)</div>
@@ -193,7 +193,7 @@
       <TD width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxtop">
           <tr>
-            <td valign=middle align=left>
+            <td valign="middle" align="left">
               <div class="boxhead">Download&nbsp;Here</div>
             </td>
           </tr>
@@ -204,7 +204,7 @@
       <TD width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxbottom">
           <tr>
-            <td align=left>
+            <td align="left">
               <div>&nbsp;-&nbsp;<a class="buttontext" href="releasenotes.html"><b>Release Notes</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://sourceforge.net/project/showfiles.php?group_id=27173">Download Files</a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://svn.ofbiz.org">Source Access</a></div>
@@ -222,7 +222,7 @@
       <TD width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxtop">
           <tr>
-            <td valign=middle align=left>
+            <td valign="middle" align="left">
               <div class="boxhead">Resources &amp; Tools</div>
             </td>
           </tr>
@@ -233,7 +233,7 @@
       <TD width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxbottom">
           <tr>
-            <td align=left>
+            <td align="left">
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://svn.ofbiz.org">OFBiz - Svn (Source)</a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://jira.ofbiz.org">OFBiz - Jira</a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://ofbizwiki.go-integral.com">OFBiz - Wiki</a></div>
@@ -262,7 +262,7 @@
       <TD width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxbottom">
           <tr>
-            <td align=left>
+            <td align="left">
               <div>&nbsp;-&nbsp;<span class="tabletext">Locales</span></div>
               <div>&nbsp;&nbsp;-&nbsp;<a class="buttontext" href="http://www.ofbiz.co.uk">United Kingdom</a></div>
               <div>&nbsp;&nbsp;-&nbsp;<a class="buttontext" href="http://www.ofbiz.de">Germany</a></div>
@@ -286,7 +286,7 @@
       <TD width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxtop">
           <tr>
-            <td valign=middle align=left>
+            <td valign="middle" align="left">
               <div class="boxhead"><nobr>Premium Service Providers</nobr></div>
             </td>
           </tr>
@@ -297,7 +297,7 @@
       <TD width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxbottom">
           <tr>
-            <td align=left>
+            <td align="left">
               <div>&nbsp;-&nbsp;<a class="buttontext" href="mailto:info@undersunconsulting.com" target="_blank">Undersun Consulting LLC</a></div>              
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.automationgroups.com" target="_blank"><b>Automation Groups International</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.go-integral.com" target="_blank"><b>Integral Business Solutions</b></a></div>
@@ -317,7 +317,7 @@
 
 <!-- Column Two -->
     <td>&nbsp;&nbsp;</td>
-    <td width="50%" valign=top>
+    <td width="50%" valign="top">
 
 
 <div class="contenttext"><b><u>Introduction</u></b></div>
@@ -335,7 +335,9 @@ Open Source CMMS/EAM, and so on.</p>
 
 <div class="contenttext"><b><u>Announcements</u></b></div>
 
-<p class="contenttext"><b><span style="color: red;">OFBiz Training Videos Now Available!</span></b> For more information and to order see the <a href="services.html">Services</a> page.</p>
+<p class="contenttext"><b><span style="color: red;">OFBiz Framework Reference Book Now Available!</span></b> For more information and to order see the <a href="services.html">Services</a> page.</p>
+
+<p class="contenttext"><b>OFBiz Training Videos still available...</b> For more information and to order see the <a href="services.html">Services</a> page.</p>
 
 <p class="contenttext"><b>New OFBiz.org Tools Online:</b>
 <a href="http://svn.ofbiz.org" class="buttontext">New SVN Source Repository</a>&nbsp;
@@ -429,14 +431,14 @@ target="_blank">iCentris</a></b></p>
 
 <!-- Column Three -->
     <td>&nbsp;&nbsp;</td>
-    <td width="30%" valign=top>
+    <td width="30%" valign="top">
 
-  <TABLE border=0 width="100%" cellspacing="0" cellpadding="0" class="boxoutside">
+  <TABLE border="0" width="100%" cellspacing="0" cellpadding="0" class="boxoutside">
     <TR>
       <TD width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxtop">
           <tr>
-            <td valign=middle align=left>
+            <td valign="middle" align="left">
               <div class="boxhead">Open Source Projects Used</div>
             </td>
           </tr>
@@ -447,7 +449,7 @@ target="_blank">iCentris</a></b></p>
       <TD width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxbottom">
           <tr>
-            <td align=left>
+            <td align="left">
                 <ul>
                   <li><a class="buttontext" href="http://sf.net/projects/jpublish/" target="_blank">JPublish</a>
                   <li><a class="buttontext" href="http://www.freemarker.org/" target="_blank">FreeMarker</a>
@@ -493,7 +495,7 @@ target="_blank">iCentris</a></b></p>
       <TD width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxtop">
           <tr>
-            <td valign=middle align=left>
+            <td valign="middle" align="left">
               <div class="boxhead">Cool Sites</div>
             </td>
           </tr>
@@ -504,7 +506,7 @@ target="_blank">iCentris</a></b></p>
       <TD width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxbottom">
           <tr>
-            <td align=left>
+            <td align="left">
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.java.net" target="_blank">Java.Net</a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://sourceforge.net" target="_blank">SourceForge</a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://freshmeat.net" target="_blank">FreshMeat</a></div>
@@ -525,7 +527,7 @@ target="_blank">iCentris</a></b></p>
       <TD width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxtop">
           <tr>
-            <td valign=middle align=left>
+            <td valign="middle" align="left">
               <div class="boxhead">Related Standards</div>
             </td>
           </tr>
@@ -536,7 +538,7 @@ target="_blank">iCentris</a></b></p>
       <TD width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxbottom">
           <tr>
-            <td align=left>
+            <td align="left">
                 <ul>
                   <li><a class="buttontext" href="http://www.w3c.org/" target="_blank">W3C</a>:
                     <a class="buttontext" href="http://www.w3c.org/XML/" target="_blank">XML</a>,
@@ -569,12 +571,12 @@ target="_blank">iCentris</a></b></p>
   </TABLE>
 
   <BR>
-  <TABLE border=0 width="100%" cellspacing="0" cellpadding="0" class="boxoutside">
+  <TABLE border="0" width="100%" cellspacing="0" cellpadding="0" class="boxoutside">
     <TR>
       <TD width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxtop">
           <tr>
-            <td valign=middle align=left>
+            <td valign="middle" align="left">
               <div class="boxhead">Runs With</div>
             </td>
           </tr>
@@ -585,7 +587,7 @@ target="_blank">iCentris</a></b></p>
       <TD width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxbottom">
           <tr>
-            <td align=left>
+            <td align="left">
               <div><a class="buttontext" href="http://www.advantagedatabase.com" target="_blank"><img src="http://resolution.extendedsystems.com/NR/ESI%20Support/ADS/images/advantage_logo.gif" width="125"/></a></div>
             </td>
           </tr>
