Fixed materials package buy now links, had wrong form name
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@3972 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/services.html
+++ b/website/services.html
@@ -547,7 +547,7 @@ related services.</p>
       
       <p class="contenttext">NEW! Also now available is the complete materials package. This includes the 3-day Framework and 10-day Complete Training DVD sets, and the Framework Reference Book. All of this for $299.95. With this you'll save about 15%, or basically you get he reference book for free!
 
-      <p class="head3"><u>OFBiz Complete Materials Pack</u>: 3-day Framework and 10-day Complete Training DVDs (6 DVDs, 50 hours), Framework Reference Book (save $50, or 15%), $299.95 <a href="javascript:document.RBPLATFORM.submit();" class="buttontext">Buy Now!</a></p>
+      <p class="head3"><u>OFBiz Complete Materials Pack</u>: 3-day Framework and 10-day Complete Training DVDs (6 DVDs, 50 hours), Framework Reference Book (save $50, or 15%), $299.95 <a href="javascript:document.OFBMATPACK.submit();" class="buttontext">Buy Now!</a></p>
       <p class="head3"><u>OFBiz Framework Reference Book</u>, $49.95 <a href="javascript:document.RBPLATFORM.submit();" class="buttontext">Buy Now!</a></p>
       <p class="head3"><u>OFBiz Framework Reference Book</u> 5 Pack (save 20%), $199.95 <a href="javascript:document.RBPLATFORM5PACK.submit();" class="buttontext">Buy Now!</a></p>
 
@@ -635,7 +635,7 @@ related services.</p>
         
       <p class="contenttext">NEW! Also now available is the complete materials package. This includes the 3-day Framework and 10-day Complete Training DVD sets, and the Framework Reference Book. All of this for $299.95. With this you'll save about 15%, or basically you get he reference book for free!
 
-      <p class="head3"><u>OFBiz Complete Materials Pack</u>: 3-day Framework and 10-day Complete Training DVDs, Framework Reference Book (save 15%), $299.95 <a href="javascript:document.RBPLATFORM.submit();" class="buttontext">Buy Now!</a></p>
+      <p class="head3"><u>OFBiz Complete Materials Pack</u>: 3-day Framework and 10-day Complete Training DVDs, Framework Reference Book (save 15%), $299.95 <a href="javascript:document.OFBMATPACK.submit();" class="buttontext">Buy Now!</a></p>
       <p class="head3"><u>OFBiz Framework 3-day Training Feb 2004</u> 3 DVDs (16 hours), $149.95 <a href="javascript:document.TRNABFEB2004.submit();" class="buttontext">Buy Now!</a></p>
       <p class="head3"><u>OFBiz Comprehensive 10-day Training July 2004</u> 3 DVDs (35 hours), $149.95 <a href="javascript:document.TRNSIPAJUL2004.submit();" class="buttontext">Buy Now!</a></p>
       <p class="head3"><u>Complete Remote Training Package</u> 6 DVDs (50 hours) + Framework Ref Book + 4 hours of remote training for $569.95, save over $255 or about 30%! <a href="javascript:document.OFBTRNGPKG.submit();" class="buttontext">Buy Now!</a></p>
