Changed FreeMarker link, freemarker.org seems to be down...
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@3988 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/index.html
+++ b/website/index.html
@@ -452,7 +452,7 @@ target="_blank">iCentris</a></b></p>
             <td align="left">
                 <ul>
                   <li><a class="buttontext" href="http://sf.net/projects/jpublish/" target="_blank">JPublish</a>
-                  <li><a class="buttontext" href="http://www.freemarker.org/" target="_blank">FreeMarker</a>
+                  <li><a class="buttontext" href="http://freemarker.sourceforge.net/" target="_blank">FreeMarker</a>
                   <li><a class="buttontext" href="http://www.beanshell.org/" target="_blank">BeanShell</a>   
                   <li><a class="buttontext" href="http://jetty.mortbay.org/jetty/index.html" target="_blank">Jetty</a> 
                   <li><a class="buttontext" href="http://jotm.objectweb.org/" target="_blank">JOTM</a>
