--- a/website/marketing.html
+++ b/website/marketing.html
@@ -274,12 +274,15 @@
             <td align="left">
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.metrobelle.com/control/main" target="_blank"><b>Metrobelle</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.ulta.com/control/main" target="_blank"><b>Ulta</b></a></div>
+              <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.esalton.com/control/main" target="_blank"><b>Salton</b></a></div>
+              
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.totes-isotoner-sales.com/ecommerce/control/main" target="_blank"><b>totes >> ISOTONER</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://hello2.cellularone.com/" target="_blank"><b>CellularOne (flash front-end)</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.artreachdallas.org/" target="_blank"><b>Artreach-Dallas</b></a></div>
               
-              <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.freakshop.com/control/main" target="_blank"><b>Freakshop</b></a></div>
-              <div>&nbsp;-&nbsp;<a class="buttontext" href="http://flipthebird.com/control/main" target="_blank"><b>Flip (the Bird)</b></a></div>
+              <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.oldglory.com/lp/main" target="_blank"><b>Old Glory</b></a></div>
+              <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.freakshop.com/lp/main" target="_blank"><b>Freakshop</b></a></div>
+              <!-- down? <div>&nbsp;-&nbsp;<a class="buttontext" href="http://flipthebird.com/control/main" target="_blank"><b>Flip (the Bird)</b></a></div> -->
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://shop.theuhl.com/control/main" target="_blank"><b>UHL Shop</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://store.riverdogshockey.com/control/main" target="_blank"><b>Richmond RiverDogs</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://icehawks.webfillment.com/control/main" target="_blank"><b>Adirondack Ice Hawks</b></a></div>
