--- a/website/scalabilityplan.html
+++ b/website/scalabilityplan.html
@@ -131,11 +131,6 @@ are not being met, optimization may be done after the fact to tune the
 application, minimizing as much as possible the decrease in maintainability 
 and customizability.</P>
 
-
-    
-
-    
-  
-
-</body></html>
+</body>
+</html>
 
