--- a/website/services.html
+++ b/website/services.html
@@ -302,9 +302,9 @@
               <tbody>
                 <tr>
                   <td align="left">
-                  <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.ofbiz.org" target="_blank"><b>Undersun Consulting LLC</b></a></div>
-                  <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="http://www.ofbiz.org" target="_blank"><b>www.ofbiz.org</b></a></div>
-                  <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="mailto:undersun@ofbiz.org"><b>undersun@ofbiz.org</b></a></div>
+                  <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.undersunconsulting.com/control/home.html" target="_blank"><b>Undersun Consulting LLC</b></a></div>
+                  <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="http://www.undersunconsulting.com/control/home.html" target="_blank"><b>www.undersunconsulting.com</b></a></div>
+                  <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="mailto:info@undersunconsulting.com"><b>info@undersunconsulting.com</b></a></div>
                   
                   <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.automationgroups.com" target="_blank"><b>Automation Groups International</b></a></div>
                   <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="http://www.automationgroups.com" target="_blank"><b>www.automationgroups.com</b></a></div>
