Moved some links to the new undersun web site
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4132 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/index.html
+++ b/website/index.html
@@ -335,9 +335,9 @@ Open Source CMMS/EAM, and so on.</p>
 
 <div class="contenttext"><b><u>Announcements</u></b></div>
 
-<p class="contenttext"><b><span style="color: red;">OFBiz Framework Reference Book Now Available!</span></b> For more information and to order see the <a href="services.html">Services</a> page.</p>
+<p class="contenttext"><b><span style="color: red;">OFBiz Framework Reference Book Now Available!</span></b> For more information and to order see the <a class="buttontext" href="http://www.undersunconsulting.com/control/home.html?atc=OFB" target="_blank">Undersun Consulting LLC</a> web site.</p>
 
-<p class="contenttext"><b>OFBiz Training Videos still available...</b> For more information and to order see the <a href="services.html">Services</a> page.</p>
+<p class="contenttext"><b>OFBiz Training Videos still available...</b> For more information and to order see the <a class="buttontext" href="http://www.undersunconsulting.com/control/home.html?atc=OFB" target="_blank">Undersun Consulting LLC</a> web site.</p>
 
 <p class="contenttext"><b>New OFBiz.org Tools Online:</b>
 <a href="http://svn.ofbiz.org" class="buttontext">New SVN Source Repository</a>&nbsp;
