A couple of new-found sites, updated another undersun link
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4168 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/index.html
+++ b/website/index.html
@@ -178,8 +178,8 @@
           <tr>
             <td align="left">
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://demo.dejc.com:8080/ecommerce/control/main" target="_blank">eCommerce Demo</a></div>
-              <div>&nbsp;-&nbsp;<a class="buttontext" href="https://demo.dejc.com:8443/catalog/control/login/main?USERNAME=demoadmin&PASSWORD=ofbiz" target="_blank">Management Console</a></div>
-              <div class="tabletext">(Demo Provided By <a class="buttontext" href="http://www.ofbiz.org/services.html" target="_blank">Undersun Consulting</a>)</div>
+              <div>&nbsp;-&nbsp;<a class="buttontext" href="https://demo.dejc.com:8443/catalog/control/login/main?USERNAME=demoadmin&PASSWORD=ofbiz" target="_blank">Management Console Demo</a></div>
+              <div class="tabletext">(Demo Provided By <a class="buttontext" href="http://www.undersunconsulting.com/control/home.html?atc=OFB" target="_blank">Undersun Consulting</a>)</div>
             </td>
           </tr>
         </table>
