--- a/website/marketing.html
+++ b/website/marketing.html
@@ -292,10 +292,12 @@
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.cactusbike.com/store/control/main" target="_blank"><b>Cactus Bike</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.partnerhomes.com" target="_blank"><b>Partner Homes</b></a></div>
 
-              <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.horthippo.com/control/main" target="_blank"><b>HortHippo.com</b></a></div>
-              <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.thepatchworkpig.co.uk/pwp/control/main" target="_blank"><b>the patchwork pig</b></a></div>
+
+              <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.magellan.edu/magellan/control/main" target="_blank"><b>Magellan University</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.donnakaran.com/control/main" target="_blank"><b>Donna Karan Collection</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.dkny.com/control/main" target="_blank"><b>DKNY</b></a></div>
+              <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.horthippo.com/control/main" target="_blank"><b>HortHippo.com</b></a></div>
+              <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.thepatchworkpig.co.uk/pwp/control/main" target="_blank"><b>the patchwork pig</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.play-music.net/ecommerce/control/main" target="_blank"><b>PlayMusic</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://shop.qproproducts.net" target="_blank"><b>QPro Products</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.specialai.com" target="_blank"><b>Special AI</b></a></div>
@@ -319,8 +321,9 @@
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.ebsstore.com/control/main" target="_blank"><b>Energy Beam Sciences</b></a></div>
 
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://extranet.ensystex.com:8080/ecommerce/control/main" target="_blank"><b>Exterra / Ensystex</b></a></div>
-              <div>&nbsp;-&nbsp;<a class="buttontext" href="https://www.discoverytoyslink.com/LeslieBagley/topFrameset.html?bottomFrame=https%3A%2F%2Fshop.discoverytoyslink.com%2Fecommerce%2Fcontrol%2FenterFromWebPage%3FREFERRING_USER_ID%3DBAG030%26REFERRING_COUNTRY_OF_BUSINESS%3DUS" target="_blank"><b>Discovery Toys</b></a></div>
+              <div>&nbsp;-&nbsp;<a class="buttontext" href="http://shop.giftedexpressions.net/ecommerce/control/main" target="_blank"><b>Gifted Expressions</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.odysseytoys.com/ecommerce/control/main" target="_blank"><b>Odyssey Toys</b></a></div>
+              <div>&nbsp;-&nbsp;<a class="buttontext" href="https://www.discoverytoyslink.com/LeslieBagley/topFrameset.html?bottomFrame=https%3A%2F%2Fshop.discoverytoyslink.com%2Fecommerce%2Fcontrol%2FenterFromWebPage%3FREFERRING_USER_ID%3DBAG030%26REFERRING_COUNTRY_OF_BUSINESS%3DUS" target="_blank"><b>Discovery Toys</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.shocktroop.com/st/control/main" target="_blank"><b>ShockTroop.com</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.tgoblin.com/control/main" target="_blank"><b>TGoblin.com</b></a></div>
 
