Added news and links for the new doc site
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4170 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/documents.html
+++ b/website/documents.html
@@ -20,11 +20,11 @@
           <td align=right>
             <table cellpadding='0' cellspacing='0' width='1%'>
               <tr>
-              	<td valign="middle" align="right"><a href="http://www.java.net"><img src="http://today.java.net/images/javanet_button_90.gif" width="90" height="25" border="0" alt="java.net Member Button"></a></td>
-                <td valign=middle>&nbsp;&nbsp;</td>
+                <td valign="middle" align="right"><a href="http://www.java.net"><img src="http://today.java.net/images/javanet_button_90.gif" width="90" height="25" border="0" alt="java.net Member Button"></a></td>
+                <td valign="middle">&nbsp;&nbsp;</td>
                 <td valign='middle' align='right'><A href="http://sf.net/projects/ofbiz"><IMG src="http://sourceforge.net/sflogo.php?group_id=27173" width="88" height="31" border="0" alt="SourceForge Logo"></A></td>
-                <td valign=middle>&nbsp;&nbsp;</td>
-                <td valign=middle><A href="http://www.ofbiz.org"><img src="images/ofbiz_powered.gif" width="88" border="0"></a></td>               
+                <td valign="middle">&nbsp;&nbsp;</td>
+                <td valign="middle"><A href="http://www.ofbiz.org"><img src="images/ofbiz_powered.gif" width="88" border="0"></a></td>               
               </tr>
             </table>
           </td>
@@ -141,11 +141,15 @@
 <div align='center' class='head2'>OFBiz Documents</div>
 <br/>
 
-<div class='contenttext'><b><u>Training Videos &amp; Documents</u></b></div>
+<div class='contenttext'><b><u>Training Videos &amp; Documentation</u></b></div>
 <ul>
-  <li class='contenttext'>See the <a href="services.html">Services</a> page for
-more information on training, training videos, and the freely available materials used in the
-training.</li>
+  <li class='contenttext'>For the OFBiz Online Documentation (also available as a PDF snapshot of the docs) 
+  see the <a href="http://www.undersunconsulting.com/control/home.html?atc=OFB">Undersun Consulting</a> site,
+  or the <a href="http://www.undersunconsulting.com/control/onlineinfo.html?atc=OFB">Online Info</a> page on that site.</li>
+  <li class='contenttext'>See the <a href="http://www.undersunconsulting.com/control/home.html?atc=OFB">Undersun Consulting</a> site for
+more information on training, training videos, and materials used in the
+training.
+  Or go directly to the <a href="http://www.undersunconsulting.com/ecommerce/control/main?atc=OFB">Undersun Store</a>.</li>
 </ul>
 
 <div class='contenttext'><b><u>Configuration Documents</u></b></div>
