--- a/website/index.html
+++ b/website/index.html
@@ -335,7 +335,9 @@ Open Source CMMS/EAM, and so on.</p>
 
 <div class="contenttext"><b><u>Announcements</u></b></div>
 
-<p class="contenttext"><b><span style="color: red;">OFBiz Framework Reference Book Now Available!</span></b> For more information and to order see the <a class="buttontext" href="http://www.undersunconsulting.com/control/home.html?atc=OFB" target="_blank">Undersun Consulting LLC</a> web site.</p>
+<p class="contenttext"><b><span style="color: red;">OFBiz Online Documentation Site Now Available!</span></b> For more information and to order/subscribe see the <a class="buttontext" href="http://www.undersunconsulting.com/control/home.html?atc=OFB" target="_blank">Undersun Consulting LLC</a> web site, or go directly to the <a class="buttontext" href="http://www.undersunconsulting.com/ecommerce/control/main?atc=OFB" target="_blank">Undersun Store</a> (which is of course running OFBiz!).</p>
+
+<p class="contenttext"><b>OFBiz Framework Reference Book Now Available!</b> For more information and to order see the <a class="buttontext" href="http://www.undersunconsulting.com/control/home.html?atc=OFB" target="_blank">Undersun Consulting LLC</a> web site.</p>
 
 <p class="contenttext"><b>OFBiz Training Videos still available...</b> For more information and to order see the <a class="buttontext" href="http://www.undersunconsulting.com/control/home.html?atc=OFB" target="_blank">Undersun Consulting LLC</a> web site.</p>
 
